tests/run-pass/semck/call-function.rs
fn foo() {}

fn main() {
    foo()
}