tests/compile-fail/semck/no-main.rs
//! ERROR: main function not found
fn a() {}